--- a/css/main.css
+++ b/css/main.css
@@ -8443,7 +8443,15 @@ footer.footer {
   float: 1;
   justify-content: flex-start;
 }
-.pagination li {}
+.pagination li {
+  font-size: 16px;
+  line-height: 24px;
+  padding: 0 12px;
+  color: inherit;
+  background-color: rgba(255,255,255,.2);
+  color: #fff;
+}
+
 .pagination--white {
   color: #0f358e;
   border-color: #fff;
