--- a/css/main.css
+++ b/css/main.css
@@ -4899,18 +4899,29 @@ section.courses {
   border-radius: 5px;
   overflow: hidden;
 }
-
+.sales-courses__item {
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #cfcfcf;
+}
 .sales-courses__item--discont:before {
+  content: attr(data-percent);
   position: absolute;
-  top: 0;
-  right: 0;
-  content: '';
-  width: 100%;
-  height: 100%;
+  margin-top: 20px;
+  right: -70px;
+  transform-origin: center;
+  transform: rotate(30deg);
+  width: 300px;
+  line-height: 50px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  background-color: #00489c;
+  color: #fff;
   z-index: 100;
   pointer-events: none;
-  background: url(../img/discont@3x.png) top right no-repeat;
-  background-size: contain;
+  /* background: url(../img/discont@3x.png) top right no-repeat;
+  background-size: contain; */
 }
 
 .sales-courses__item .course__city {
