--- a/css/main.css
+++ b/css/main.css
@@ -4563,9 +4563,9 @@ section.courses {
 }
 
 .education__areas--active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box!important;
+  display: -ms-flexbox!important;
+  display: flex!important;
 }
 
 .education__subject {
@@ -7536,6 +7536,7 @@ section.courses {
 .mebel__item {
   -ms-flex-preferred-size: calc(50% - 15px);
   flex-basis: calc(50% - 15px);
+  max-width: calc(50% - 15px);
   border-radius: 5px;
   -webkit-box-shadow: 20px 20px 40px 0 rgba(0, 0, 0, 0.15);
   box-shadow: 20px 20px 40px 0 rgba(0, 0, 0, 0.15);
@@ -7562,9 +7563,9 @@ section.courses {
 }
 
 .mebel__item-photo img {
-  height: 100%;
+  /* height: 100%;
   margin-right: 15px;
-  width: auto !important;
+  width: auto !important; */
 }
 
 .mebel__item-price {
